# parallel-sketch

./: .gitignore  CMakeLists.txt  README.md  citations.bib  proposal.tex
docs/: citations.bib  parallel-sketch.sty  report.tex  sketch-constants.tex
include/: sketch.h  sketch.hpp  sketch_cuda.h  util.hpp
src/: util.cpp
src/applications/: README.md
src/cpp/applications/: MAD_sketch.cpp  MAD_sketch.hpp  MAD_sketch_omp.cpp  README.md  run_MAD_sketch.cpp
src/cpp/sketches/: adaptive_sketch.cpp  count_min_sketch.cpp  count_sketch.cpp  gaussian_sketch.cpp  leverage_score_sketch.cpp  oblivious_sketch.cpp  util.cpp
src/cuda/sketches/: adaptive_sketch.cu  count_sketch.cu  count_sketch_basic.cu  gaussian_sketch_basic.cu  leverage_score_sketch_basic.cu  leverage_score_sketch_opt.cu  oblivious_sketch.cu  util.hpp
src/sketches/: Makefile  README.md  adaptive_sketch.cpp  count_sketch.cpp  count_sketch.hpp  gaussian_projection.cpp  gaussian_sketch.cpp  leverage_score_sketch.cpp  oblivious_sketch.cpp  sketch.hpp  uniform_sampling_sketch.cpp
test/: .__afs4E25  Makefile  README.md  benchmark.py  count_sketch_test.cpp  gaussian_projection_test.cpp  gaussian_sketch_test.cpp  gen_random_matrices.py  gen_reference.py  read_matrices.cpp  regress.py  test_sketch.cpp  test_sketch_cuda.cu  test_subspace_embedding.cpp  time_flower.py
test/MAD_testing/: Makefile  mrr.py  test_MAD.py
test/data/graph_data/: processed_eval1_2.txt  processed_eval2_10.txt  processed_eval2_2.txt  processed_gold1_2.txt  processed_gold2_10.txt  processed_gold2_2.txt  processed_seed1_2.txt  processed_seed2_10.txt  processed_seed2_2.txt
test/data/images/: flower.txt  gen_images.py
test/data/random_matrices/: README.md  gen_random_matrices.py  med_test1.txt  med_test8.txt  small_test0.txt  small_test2.txt  small_test5.txt
test/data/random_vectors/: gen_random_vectors.py  small_test_0_scale_10.txt  small_test_0_scale_100.txt  small_test_0_scale_15.txt  small_test_0_scale_20.txt  small_test_0_scale_25.txt  small_test_0_scale_30.txt  small_test_0_scale_35.txt  small_test_0_scale_40.txt  small_test_0_scale_45.txt  small_test_0_scale_5.txt  small_test_0_scale_50.txt  small_test_0_scale_55.txt  small_test_0_scale_60.txt  small_test_0_scale_65.txt  small_test_0_scale_70.txt  small_test_0_scale_75.txt  small_test_0_scale_80.txt  small_test_0_scale_85.txt  small_test_0_scale_90.txt  small_test_0_scale_95.txt  small_test_1_scale_10.txt  small_test_1_scale_100.txt  small_test_1_scale_15.txt  small_test_1_scale_20.txt  small_test_1_scale_25.txt  small_test_1_scale_30.txt  small_test_1_scale_35.txt  small_test_1_scale_40.txt  small_test_1_scale_45.txt  small_test_1_scale_5.txt  small_test_1_scale_50.txt  small_test_1_scale_55.txt  small_test_1_scale_60.txt  small_test_1_scale_65.txt  small_test_1_scale_70.txt  small_test_1_scale_75.txt  small_test_1_scale_80.txt  small_test_1_scale_85.txt  small_test_1_scale_90.txt  (+161 more)
test/images/: README.md  flower.txt  gen_images.py
test/random_matrices/: README.md  gen_random_matrices.py  med_test0.txt  med_test1.txt  med_test2.txt  med_test3.txt  med_test4.txt  med_test5.txt  med_test6.txt  med_test7.txt  med_test8.txt  med_test9.txt  small_test0.txt  small_test1.txt  small_test2.txt  small_test3.txt  small_test4.txt  small_test5.txt  small_test6.txt  small_test7.txt  small_test8.txt  small_test9.txt
test/uci_cover/: README.md  get_data.sh
test/uci_msd/: README.md  get_data.sh
